# rust-wikipedia

./: Cargo.toml
src/: main.rs
src/wikipedia_random/: article.rs  fetcher.rs  mod.rs  printer.rs
