[package]
name = "wikipediaapi"
version = "0.1.0"
authors = ["Leo Blume"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2"
reqwest = { version = "0.11.0", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
regex = "1"
serde_json="1.0"
csv = "1.1"
